--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ features/resources/huge.jpg
 features/resources/huge.mp3
 public/assets/*
 public/assets/common.js.gz
+public/javascript/translations.js
 
 
